Fixed tny connect popup z-index and other things

--- a/Website/assets/style.css
+++ b/Website/assets/style.css
@@ -42,3 +42,7 @@ p {
 body {
     @apply bg-slate-50 dark:bg-slate-800 text-slate-700 dark:text-slate-50
 }
+
+.blocklyToolboxDiv {
+    z-index: 20 !important;
+}
